Improvements to ontology Docs

--- a/FoodleMaps.ipynb
+++ b/FoodleMaps.ipynb
@@ -17,13 +17,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from SPARQLWrapper import SPARQLWrapper, JSON\n",
     "\n",
-    "sparql = SPARQLWrapper(\"http://127.0.0.1:3030/FoodleMaps\")"
+    "sparql = SPARQLWrapper(\"https://sparql.alexmv12.xyz/FoodleMaps\")"
    ]
   },
   {
@@ -35,14 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://www.semanticweb.org/FoodleMaps#Trattoria_dell_orsa\n"
+      "https://alexmv12.github.io/FoodleMaps/#Trattoria_dell_orsa\n"
      ]
     }
    ],
@@ -70,18 +70,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://www.semanticweb.org/FoodleMaps#Pasta_al_pomodoro\n",
-      "http://www.semanticweb.org/FoodleMaps#Pasta_alla_carbonara\n",
-      "http://www.semanticweb.org/FoodleMaps#Merluzzo_alla_livornese\n",
-      "http://www.semanticweb.org/FoodleMaps#Filetto_al_pepe_verde\n",
-      "http://www.semanticweb.org/FoodleMaps#Tiramisu\n"
+      "https://alexmv12.github.io/FoodleMaps/#Pasta_alla_carbonara\n",
+      "https://alexmv12.github.io/FoodleMaps/#Filetto_al_pepe_verde\n",
+      "https://alexmv12.github.io/FoodleMaps/#Merluzzo_alla_livornese\n",
+      "https://alexmv12.github.io/FoodleMaps/#Pasta_al_pomodoro\n",
+      "https://alexmv12.github.io/FoodleMaps/#Tiramisu\n"
      ]
     }
    ],
